--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,6 @@
             "outputPath": "dist/my-map",
             "index": "src/index.html",
             "browser": "src/main.ts",
-
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -91,11 +90,23 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "a3a96714-8538-4bb1-94f9-ef4f20b7371b"
+    "analytics": "a3a96714-8538-4bb1-94f9-ef4f20b7371b",
+    "schematicCollections": [
+      "angular-eslint"
+    ]
   }
 }
