--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --browsers ChromeHeadless",
+    "test": "ng test --browsers ChromeHeadless --watch=false",
     "lint": "ng lint"
   },
   "private": true,
@@ -42,13 +42,5 @@
     "lint-staged": "15.4.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "8.18.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "**/*.ts": "eslint --fix"
   }
 }
