--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,12 @@
     "target": "ES2022",
     "module": "ES2022",
     "paths": {
-      "@shared/*": ["./src/app/shared/*"],
+      "@shared/*": [
+        "./src/app/shared/*"
+      ],
+      "@pages/*": [
+        "./src/app/pages/*"
+      ],
     }
   },
   "angularCompilerOptions": {
