--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --browsers ChromeHeadless --watch=false",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "postinstall": "npx husky install"
   },
   "private": true,
   "dependencies": {
